test/TestSuite/Syntax/Correct/AutoMacros.tjp
project prj "Auto Macro Test" "1.0" 2006-09-22-0:00 +1m {
	timezone "UTC"
	now 2006-10-15
}

task items "Project breakdown" {
  start ${projectstart} 
}

taskreport tasks "My Tasks" {
  formats html
	start ${now}
	end ${projectend}
}	

