test/TestSuite/Syntax/Errors/report_start.tjp
project test "Test" "1.0" 2007-11-16 +2m 

task t "T" {
  start ${projectstart}
}

taskreport report "report.html" {
# MARK: error 9 report_start
  start 2008-02-01
}
